--- a/html.html
+++ b/html.html
@@ -42,7 +42,7 @@
     <input type="radio" id="female" name="gender"><span>Female</span>
     <input type="radio" id="orther" name="gender"><span>Orther</span><br>
     <label for="nationality">Nationality:</label>
-    <select name="" id="">
+    <select name="" id="nationality">
       <option value="japan">Japan</option>
       <option value="english">English</option>
       <option value="vietnam">VietNam</option>
