--- a/html.html
+++ b/html.html
@@ -27,7 +27,7 @@
       <li>Item 3</li>
     </ol>
   </div>
-  <img src="https://cdn.dribbble.com/users/2545/screenshots/101722/shot_1295391368.png" alt="">
+  <img src="https://cdn.dribbble.com/users/2545/screenshots/101722/shot_1295391368.png" alt="logo">
   <iframe width="440" height="250" src="https://www.youtube.com/embed/k_C7WbeX-9c?list=RDI5rDib8ved0"></iframe>
   <hr>
   <form>
