--- a/html.html
+++ b/html.html
@@ -31,10 +31,10 @@
   <iframe width="440" height="250" src="https://www.youtube.com/embed/k_C7WbeX-9c?list=RDI5rDib8ved0"></iframe>
   <hr>
   <form>
-    <label for="firstName">First Name:</label>
-    <input id="firstName" type="text"><br>
-    <label for="lastName">Last Name:</label>
-    <input id="lastName" type="text"><br>
+    <label for="first_name">First Name:</label>
+    <input id="first_name" type="text"><br>
+    <label for="last_name">Last Name:</label>
+    <input id="last_name" type="text"><br>
     <label for="age">Age:</label>
     <input id="age" type="number"><br>
     <label for="gender">Gender:</label>
