--- a/html.html
+++ b/html.html
@@ -133,10 +133,10 @@
   <header>
     <nav>
       <ul>
-        <li>Home</li>
-        <li>About us</li>
-        <li>Product</li>
-        <li>Contacts</li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Product</a></li>
+        <li><a href="#">Contacts</a></li>
       </ul>
     </nav>
   </header>
