--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
         <div class="outer-box">
           <div class="dropdown">
             <button class="btn btn-search"><i class="icon icon-search"></i></button>
-            <form>
-              <input type="text" placeholder="Search...">
-              <button><i class="icon icon-search"></i></button>
+            <form class="form-search">
+              <input type="text" class="form-control" placeholder="Search...">
+              <button class="btn btn-search"><i class="icon icon-search"></i></button>
             </form>
           </div>
-          <a href="">Consultation</a>
+          <a href="" class="link">Consultation</a>
         </div>
       </div>
     </div>
@@ -116,7 +116,8 @@
   <main class="page-main">
     <section class="section-slideshow">
       <ul class="slide-list">
-        <li class="slide-item"><img src="" alt="" class="slide-img">
+        <li class="slide-item">
+          <img src="" alt="" class="slide-img">
           <div>
             <h2>Triph helps you to save time and money.</h2>
             <p>Triph business theme continues to grow every day thanks to the confidence.</p>
@@ -124,7 +125,8 @@
             <a class="btn btn-contact-us">Contact Us</a>
           </div>
         </li>
-        <li class="slide-item"><img src="" alt="" class="slide-img">
+        <li class="slide-item">
+          <img src="" alt="" class="slide-img">
           <div>
             <h2>Don't dreamed about success just work for it.</h2>
             <p>Triph business theme continues to grow every day thanks to the confidence.</p>
@@ -132,7 +134,8 @@
             <a class="btn btn-contact-us">Contact Us</a>
           </div>
         </li>
-        <li class="slide-item"><img src="" alt="" class="slide-img">
+        <li class="slide-item">
+          <img src="" alt="" class="slide-img">
           <div>
             <h2>Work with world class experts your next project</h2>
             <p>Triph business theme continues to grow every day thanks to the confidence.</p>
@@ -146,25 +149,25 @@
     </section>
     <section class="section-services-block">
       <div class="container">
-        <div>
-          <h2>Welcome to Company</h2>
-          <p>We are experts in this industry with over 100 years experience. What that means is you are going to get
+        <div class="sec-title">
+          <h2 class="title-name">Welcome to Company</h2>
+          <p class="description">We are experts in this industry with over 100 years experience. What that means is you are going to get
             right solution, please find our services.
           </p>
         </div>
         <ul class="services">
           <li class="service">
-            <div>
-              <div>
-                <img src="" alt="organization">
+            <div class="overlay-box">
+              <div class="overlay-inner">
+                <img class="service-img" src="" alt="organization">
                 <i class="icon icon-like"></i>
               </div>
-              <div>
-                <p>Priority interst for many organizations, when comes sustainbility &amp; corporate responsiblty, normal rules of busines apply. </p>
+              <div class="content">
+                <p class="text">Priority interst for many organizations, when comes sustainbility &amp; corporate responsiblty, normal rules of busines apply. </p>
               </div>
             </div>
-            <div>
-              <h3>Organization</h3><a href="">
+            <div class="lower-box">
+              <h3 class="title">Organization</h3><a href="">
               <i class="icon icon-next"></i></a>
             </div>
           </li>
