--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
     </div>
   </main>
   <footer class="page-footer">
-    <section class="footer-top">
+    <div class="footer-top">
       <div class="container">
         <div class="section-widgets">
           <div class="widget logo-widget">
@@ -625,8 +625,8 @@
           </ul>
         </div>
       </div>
-    </section>
-    <section class="footer-bottom">
+    </div>
+    <div class="footer-bottom">
       <div class="container">
         <p class="coppy-right">Copyrights © 2017 All Rights Reserved. Powered by <a class="high-lights">Company</a></p>
         <nav class="foote-nav">
@@ -638,7 +638,7 @@
           </ul>
         </nav>
       </div>
-    </section>
+    </div>
   </footer>
 </body>
 </html>
