--- a/index.html
+++ b/index.html
@@ -207,28 +207,28 @@
               <i class="icon"></i>
               <strong class="count">1472</strong>
             </div>
-            <span class="name">Projects Completed</span>
+            <h4 class="name">Projects Completed</h4>
           </li>
           <li class="counter-item">
             <div class="icon-and-count">
               <i class="icon"></i>
               <strong class="count">285</strong>
             </div>
-            <span class="name">Experienced Workers</span>
+            <h4 class="name">Experienced Workers</h4>
           </li>
           <li class="counter-item">
             <div class="icon-and-count">
               <i class="icon"></i>
               <strong class="count">625</strong>
             </div>
-            <span class="name">National Awards Won</span>
+            <h4 class="name">National Awards Won</h4>
           </li>
           <li class="counter-item">
             <div class="icon-and-count">
               <i class="icon"></i>
               <strong class="count">3962</strong>
             </div>
-            <span class="name">Cups Of Coffee </span>
+            <h4 class="name">Cups Of Coffee </h4>
           </li>
         </ul>
       </div>
