--- a/index.html
+++ b/index.html
@@ -429,8 +429,8 @@
           </li>
         </ul>
         <div class="feedback-dots">
-          <i class="icon icon-dot"></i>
-          <i class="icon icon-dot"></i>
+          <button class="btn btn-dot"><i class="icon icon-dot"></i></button>
+          <button class="btn btn-dot"><i class="icon icon-dot"></i></button>
         </div>
       </div>
     </section>
