--- a/index.html
+++ b/index.html
@@ -590,30 +590,34 @@
               </li>
             </ul>
           </div>
-          <ul class="contacts">
-            <li class="contact-item">
-              <i class="icon icon-address"></i>
-              <div class="contact-content">
-                <span class="title">Address</span>
-                <span class="text">185, Triph Street, Los Angeles, USA.</span>
-              </div>
-            </li>
-            <li class="contact-item">
-              <i class="icon icon-phone"></i>
-              <div class="contact-content">
-                <span class="title">Call Us On</span>
-                <span class="text">Front Desk: +123-456-7890 & 23</span>
-              </div>
-            </li>
-            <li class="contact-item">
-              <i class="icon icon-email"></i>
-              <div class="contact-content">
-                <span class="title">Email At</span>
-                <span class="text">Supportteam@yourdomain.com</span>
-              </div>
-            </li>
-          </ul>
         </div>
+      </div>
+    </div>
+    <div class="footer-contacts">
+      <div class="container">
+        <ul class="contacts">
+          <li class="contact-item">
+            <i class="icon icon-address"></i>
+            <div class="contact-content">
+              <span class="title">Address</span>
+              <span class="text">185, Triph Street, Los Angeles, USA.</span>
+            </div>
+          </li>
+          <li class="contact-item">
+            <i class="icon icon-phone"></i>
+            <div class="contact-content">
+              <span class="title">Call Us On</span>
+              <span class="text">Front Desk: +123-456-7890 & 23</span>
+            </div>
+          </li>
+          <li class="contact-item">
+            <i class="icon icon-email"></i>
+            <div class="contact-content">
+              <span class="title">Email At</span>
+              <span class="text">Supportteam@yourdomain.com</span>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
     <div class="footer-bottom">
