--- a/index.html
+++ b/index.html
@@ -599,21 +599,21 @@
           <li class="contact-item">
             <i class="icon icon-address"></i>
             <div class="contact-content">
-              <span class="title">Address</span>
+              <h4 class="title">Address</h4>
               <span class="text">185, Triph Street, Los Angeles, USA.</span>
             </div>
           </li>
           <li class="contact-item">
             <i class="icon icon-phone"></i>
             <div class="contact-content">
-              <span class="title">Call Us On</span>
+              <h4 class="title">Call Us On</h4>
               <span class="text">Front Desk: +123-456-7890 & 23</span>
             </div>
           </li>
           <li class="contact-item">
             <i class="icon icon-email"></i>
             <div class="contact-content">
-              <span class="title">Email At</span>
+              <h4 class="title">Email At</h4>
               <span class="text">Supportteam@yourdomain.com</span>
             </div>
           </li>
