--- a/index.html
+++ b/index.html
@@ -622,15 +622,17 @@
     </div>
     <div class="footer-bottom">
       <div class="container">
-        <p class="coppy-right">Copyrights © 2017 All Rights Reserved. Powered by <a href="" class="high-lights">Company</a></p>
-        <nav class="foote-nav">
-          <ul class="menu-list">
-            <li class="menu-item"><a href="">Legal</a></li>
-            <li class="menu-item"><a href="">Privacy Policy</a></li>
-            <li class="menu-item"><a href="">Sitemap</a></li>
-            <li class="menu-item"><a href="">Contact</a></li>
-          </ul>
-        </nav>
+        <div class="swapper">
+          <p class="coppy-right">Copyrights © 2017 All Rights Reserved. Powered by <a href="" class="high-lights">Company</a></p>
+          <nav class="foote-nav">
+            <ul class="menu-list">
+              <li class="menu-item"><a href="">Legal</a></li>
+              <li class="menu-item"><a href="">Privacy Policy</a></li>
+              <li class="menu-item"><a href="">Sitemap</a></li>
+              <li class="menu-item"><a href="">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </div>
   </footer>
