--- a/Ex-css-day1/ex2/index.html
+++ b/Ex-css-day1/ex2/index.html
@@ -182,9 +182,8 @@
           <input type="text">
           <button type="submit"><i class="fa fa-paper-plane"></i></button>
         </form>
-        <!-- Reusable purposes -->
         <div class="footer-socials flex">
-          <h4 class="socials-title">Follow on</h4>
+          <h4 class="socials-title">Follow on</h4>s
           <ul class="socials flex">
             <li><a href=""><i class="fa fa-facebook"></i></a></li>
             <li><a href=""><i class="fa fa-google-plus"></i></a></li>
