--- a/Ex-css-day1/ex2/index.html
+++ b/Ex-css-day1/ex2/index.html
@@ -221,7 +221,7 @@
               <li><a href="">Lorem ipsum</a></li>
             </ul>
           </div>
-          <div class="footer-middle-col">
+          <div class="footer-middle-col col-6">
             <h3 class="footer-title">Footer Map</h3>
             <iframe class="footer-map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d30670.580616230884!2d108.23051521528319!3d16.074694137372244!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8760801d587e8d6e!2sC%C3%B4ng%20ty%20TNHH%20Asian%20Tech!5e0!3m2!1sen!2s!4v1606818683642!5m2!1sen!2s" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           </div>
