--- a/Ex-css-day1/ex2/index.html
+++ b/Ex-css-day1/ex2/index.html
@@ -162,7 +162,7 @@
           <button type="submit"><i class="fa fa-paper-plane"></i></button>
         </form>
         <div class="footer-socials flex">
-          <h4 class="socials-title">Follow on</h4>s
+          <h4 class="socials-title">Follow on</h4>
           <ul class="socials flex">
             <li><a href=""><i class="fa fa-facebook"></i></a></li>
             <li><a href=""><i class="fa fa-google-plus"></i></a></li>
