Add style slide show and carosel

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
       <div class="container">
         <h2 class="sec-title">Customer Feedback</h2>
         <ul class="feedbacks row">
-          <li class="feedback col-large-6">
+          <li class="feedback col-large-6 col-medium-12">
             <div class="pd-3 bg-white">
               <div class="feedback-info flex-between">
                 <div class="flex">
@@ -415,7 +415,7 @@
               </div>
             </div>
           </li>
-          <li class="feedback col-large-6">
+          <li class="feedback col-large-6 col-medium-12">
             <div class="pd-3 bg-white">
               <div class="feedback-info flex-between">
                 <div class="flex">
@@ -435,7 +435,9 @@
               </div>
             </div>
           </li>
-          <li class="feedback col-large-6 col-medium-12 is-hidden">
+        </ul>
+        <ul class="feedbacks row">
+          <li class="feedback col-large-6 col-medium-12">
             <div class="pd-3 bg-white">
               <div class="feedback-info flex-between text-right">
                 <div class="flex">
@@ -455,13 +457,13 @@
               </div>
             </div>
           </li>
-          <li class="feedback col-large-6 col-medium-12 is-hidden">
+          <li class="feedback col-large-6 col-medium-12">
             <div class="pd-3 bg-white">
               <div class="feedback-info flex-between text-right">
                 <div class="flex">
                   <img class="avatar" src="./assets/images/author-7.jpg" alt="avatar">
                   <div class="info-left">
-                    <h3 class="name">Emilia Crane</h3>
+                    <h3 class="name">Lyly Emmy</h3>
                     <span class="location">California</span>
                   </div>
                 </div>
@@ -477,7 +479,7 @@
           </li>
         </ul>
         <div class="text-center mg-t-5">
-          <button class="btn btn-dot bg-primary mg-r-2"></button>
+          <button class="btn btn-dot mg-r-2"></button>
           <button class="btn btn-dot"></button>
         </div>
       </div>
@@ -621,16 +623,16 @@
           <div class="widget widget-middle col-large-4 col-medium-6">
             <h3 class="footer-title">Usefull Links</h3>
             <ul class="middle-list row">
-              <li class="middle col-6 col-small-12 col-large-6"><a href="">Business Growth</a></li>
-              <li class="middle col-6 col-small-12 col-large-6"><a href="">About Triph</a></li>
-              <li class="middle col-6 col-small-12 col-large-6"><a href="">Sustainability</a></li>
-              <li class="middle col-6 col-small-12 col-large-6"><a href="">Customer FAQ’s</a></li>
-              <li class="middle col-6 col-small-12 col-large-6"><a href="">Performance</a></li>
-              <li class="middle col-6 col-small-12 col-large-6"><a href="">Testimonials</a></li>
-              <li class="middle col-6 col-small-12 col-large-6"><a href="">Customer Insights</a></li>
-              <li class="middle col-6 col-small-12 col-large-6"><a href="">Free Consultation</a></li>
-              <li class="middle col-6 col-small-12 col-large-6"><a href="">Organization</a></li>
-              <li class="middle col-6 col-small-12 col-large-6"><a href="">Meet Our Team</a></li>
+              <li class="middle col-6 col-small-12 col-medium-6"><a href="">Business Growth</a></li>
+              <li class="middle col-6 col-small-12 col-medium-6"><a href="">About Triph</a></li>
+              <li class="middle col-6 col-small-12 col-medium-6"><a href="">Sustainability</a></li>
+              <li class="middle col-6 col-small-12 col-medium-6"><a href="">Customer FAQ’s</a></li>
+              <li class="middle col-6 col-small-12 col-medium-6"><a href="">Performance</a></li>
+              <li class="middle col-6 col-small-12 col-medium-6"><a href="">Testimonials</a></li>
+              <li class="middle col-6 col-small-12 col-medium-6"><a href="">Customer Insights</a></li>
+              <li class="middle col-6 col-small-12 col-medium-6"><a href="">Free Consultation</a></li>
+              <li class="middle col-6 col-small-12 col-medium-6"><a href="">Organization</a></li>
+              <li class="middle col-6 col-small-12 col-medium-6"><a href="">Meet Our Team</a></li>
             </ul>
           </div>
           <div class="widget col-large-4 col-medium-6 col-small-12">
