--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <li><a href="">Meet our team</a></li>
               <li class="dropdown drop-sub">
                 <a href="">Projects</a>
-                <ul class="dropdown-content">
+                <ul class="dropdown-content drop-sub-content">
                   <li><a href="">Our Project</a></li>
                   <li><a href="">Projects Single</a></li>
                 </ul>
