FIx transtion service

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Welcome to your site name</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="icon" href="/assets/images/logo-title.png" type="image/gif" sizes="16x16">
 </head>
 <body>
   <header class="page-header">
